--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -267,7 +267,8 @@ $sidenav-line-height: $sidenav-item-height !default;
 
 $slider-bg-color: color('grey', 'base') !default;
 $slider-bg-color-light: color('grey', 'lighten-2') !default;
-$slider-indicator-color: color('green', 'base') !default;
+// $slider-indicator-color: color('green', 'base') !default;
+$slider-indicator-color: color('purple', 'base') !default;
 
 
 // 16. Spinners | Loaders
