--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -12,7 +12,7 @@
     {% endif %}
     <div class="row">
         {% for item in cards.items %}
-        <div class="col s12 m{{size}}">
+        <div class="col s12 m{{size}} fade-in">
             <div {% if item.tag%} id="{{item.tag}}" {% endif %}
                 class="card sticky-action customh {% if cards.zoom == true %} zoom-image {% endif %}">
                 <div class="card-image valign-wrapper">
