--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html lang="it">
-  {% include head.html %}
-  <body>
-      {% assign navurl = page.url | remove: 'index.html' | remove: '/'%}
+{% include head.html %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-      <nav class="custom1" role="navigation">
-          <div class="nav-wrapper container">
-              <a href="#" data-target="nav-mobile" class="button-collapse hide-on-large-only sidenav-trigger"><i class="material-icons">menu</i></a>
-              <a id="logo-container" href="{{ site.url }}/index.html" class="brand-logo">{{ site.data.generic.title }}</a>
+<body>
+  {% assign navurl = page.url | remove: 'index.html' | remove: '/'%}
 
-                    {% include nav.html nav=site.data.menu%}
+  <nav class="custom1" role="navigation">
+    <div class="nav-wrapper container">
+      <a href="#" data-target="nav-mobile" class="button-collapse hide-on-large-only sidenav-trigger"><i
+          class="material-icons">menu</i></a>
+      <a id="logo-container" href="{{ site.url }}/index.html" class="brand-logo">{{ site.data.generic.title }}</a>
 
-          </div>
-      </nav>
-      {% include mobile-nav.html nav=site.data.menu%}
+      {% include nav.html nav=site.data.menu%}
 
+    </div>
+  </nav>
+  {% include mobile-nav.html nav=site.data.menu%}
 
-        {{ content }}
-    {% include footer.html %}
-  </body>
-  {% include scripts.html %}
+  <main>
+    {{ content }}
+  </main>
+  {% include footer.html %}
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const faders = document.querySelectorAll('.fade-in');
+      const appearOptions = {
+        threshold: 0.1,
+        rootMargin: "0px 0px 0px 0px"
+      };
+
+      const appearOnScroll = new IntersectionObserver(function (entries, observer) {
+        entries.forEach(entry => {
+          if (!entry.isIntersecting) return;
+          entry.target.classList.add("visible");
+          observer.unobserve(entry.target);
+        });
+      }, appearOptions);
+
+      faders.forEach(el => {
+        appearOnScroll.observe(el);
+      });
+    });
+  </script>
+
+</body>
+{% include scripts.html %}
+
 </html>
