--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -53,6 +53,7 @@ ul.dashed > li:before{
 .card-action.text-right a{
     margin-right: 0px !important;
     margin-left: 24px !important;
+    border-radius: 12px;
 }
 
 .collapsible-header > .row{
@@ -90,10 +91,12 @@ ul.dashed > li:before{
 .card-action.text-right a{
     display: inline-flex;
     vertical-align: baseline;
+    border-radius: 12px;
 }
 
 .card-action.text-right i.material-icons{
     margin-right: 6px;
+    border-radius: 12px;
 }
 
 
@@ -116,11 +119,23 @@ ul.dashed > li:before{
 
 .card-title-custom.closer i.material-icons{
     margin-top: 4px;
+    border-radius: 12px;
 }
-.card.zoom-image .card-image img{
+.card.zoom-image {
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+.card-image{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px 12px 0px 0px;
+}
+
+.card{
+    border-radius: 12px;
 }
 
 #gradient-nav{
