--- a/_includes/schedule-widget.html
+++ b/_includes/schedule-widget.html
@@ -42,7 +42,8 @@
                 <a href="{{ speaker.url }}" class="speaker-card-link">
                     <div class="speaker-card">
                         <div class="speaker-image-container">
-                            <img src="{{ speaker.photo }}" alt="{{ speaker.name }}" class="speaker-image" />
+                            <img src="{{ speaker.photo | relative_url }}" alt="{{ speaker.name }}"
+                                class="speaker-image" />
                         </div>
                         <div class="speaker-info">
                             <div class="speaker-name">{{ speaker.name }}</div>
