--- a/css/main.scss
+++ b/css/main.scss
@@ -371,3 +371,12 @@ main {
   border-bottom-right-radius: 12px;
   // background-color: lighten($color-type1, 5%);
 }
+
+.card.highlighted-card {
+  position: relative;
+  box-shadow: 0 0 0 1.5px $color-type1, 0 4px 12px $color-type1;
+  // border: 1.5px solid $color-type1;
+  // box-shadow: 0 4px 12px $color-type1;
+  // background-color: rgba(255, 249, 196, 0.2);
+  transition: all 0.4s ease;
+}
