--- a/css/main.scss
+++ b/css/main.scss
@@ -380,3 +380,7 @@ main {
   // background-color: rgba(255, 249, 196, 0.2);
   transition: all 0.4s ease;
 }
+
+.collection{
+  border-radius: 12px !important;
+}
