--- a/_includes/schedule-widget.html
+++ b/_includes/schedule-widget.html
@@ -8,7 +8,7 @@
 
         {% for slot in day.slots %}
         {% assign is_last = forloop.last %}
-        <div class="schedule-slot{% if is_last %} last-slot{% endif %} fade-in">
+        <div class="schedule-slot{% if is_last %} last-slot{% endif %}">
             <div class="slot-meta">
                 <i class="material-icons icon-time">access_time</i>
                 {{ slot.time }}
@@ -37,7 +37,7 @@
             <div class="note-description">{{ slot.note | safe}}</div>
             {% endif %}
             {% if slot.speakers and slot.speakers.size > 0 %}
-            <div class="speakers fade-in">
+            <div class="speakers">
                 {% for speaker in slot.speakers %}
                 <a href="{{ speaker.url }}" class="speaker-card-link">
                     <div class="speaker-card">
