--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -131,7 +131,12 @@ ul.dashed > li:before{
 .card-image{
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    // height: 100%;
+    height: 50%; /* mobile default */
+    overflow: hidden;
+    display: flex;
+    justify-content: center;   // centra orizzontalmente
+    align-items: center;       // centra verticalmente
     border-radius: 12px 12px 0px 0px;
 }
 
@@ -231,9 +236,43 @@ padding: 20px 0 0 0;
     height: 720px;
 }
 
-.card.customh .card-image{
-    height:200px;
-    overflow: hidden;
+.card.customh .card-image {
+  height: 200px; // mobile default
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 992px) {
+  .card.customh:not(.small-card) .card-image {
+    height: 300px;
+  }
+  /* se la card ha la classe small-card, resta a 200px */
+}
+
+// .card.customh .card-image img {
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+//   display: block;
+// }
+
+
+/* Default: adattamento in larghezza */
+.card.customh .card-image img.fit-width {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: block;
+}
+
+/* Zoom: riempi tutto lo spazio disponibile */
+.card.customh .card-image img.zoom-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .left-padding{
