--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="nav-wrapper container">
       <a href="#" data-target="nav-mobile" class="button-collapse hide-on-large-only sidenav-trigger"><i
           class="material-icons">menu</i></a>
-      <a id="logo-container" href="{{ site.url }}/index.html" class="brand-logo">{{ site.data.generic.title }}</a>
+      <a id="logo-container" href="{{ '/' | relative_url }}" class="brand-logo">{{ site.data.generic.title }}</a>
 
       {% include nav.html nav=site.data.menu%}
 
@@ -23,29 +23,7 @@
   </main>
   {% include footer.html %}
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const faders = document.querySelectorAll('.fade-in');
-      const appearOptions = {
-        threshold: 0.1,
-        rootMargin: "0px 0px 0px 0px"
-      };
-
-      const appearOnScroll = new IntersectionObserver(function (entries, observer) {
-        entries.forEach(entry => {
-          if (!entry.isIntersecting) return;
-          entry.target.classList.add("visible");
-          observer.unobserve(entry.target);
-        });
-      }, appearOptions);
-
-      faders.forEach(el => {
-        appearOnScroll.observe(el);
-      });
-    });
-  </script>
-
+  {% include scripts.html %}
 </body>
-{% include scripts.html %}
 
 </html>
