--- a/css/main.scss
+++ b/css/main.scss
@@ -62,7 +62,7 @@ $on-laptop:        800px;
         "materialize",
         "custom"
 ;
-
+  
 // my modification
 
 html,
@@ -81,7 +81,7 @@ main {
 
 .card.highlighted-card {
   position: relative;
-  box-shadow: 0 0 0 1.5px $color-type1, 0 4px 12px $color-type1;
+  box-shadow: 0 6px 30px $color-type1;
   // border: 1.5px solid $color-type1;
   // box-shadow: 0 4px 12px $color-type1;
   // background-color: rgba(255, 249, 196, 0.2);
@@ -103,7 +103,7 @@ main {
 
 #front-page-logo {
   // height: 100px;                 // o quanto vuoi
-  max-width: 70%;                // evita che esca orizzontalmente
+  max-width: 80%;                // evita che esca orizzontalmente
   display: block;
   margin: 0 auto;                // centrato
 }
@@ -114,29 +114,6 @@ main {
   height: 100%;
   padding: 1rem 0;
 }
-
-// /* Quando hover o attivo, sfondo pieno */
-// .sidenav .logo a:hover,
-// .sidenav .logo a:focus {
-//   background-color: rgba(176, 133, 235, 0.0); // giallo chiaro esempio
-// }
-
-
-
-// /* Impedisci lo scroll orizzontale */
-// body, html {
-//   overflow-x: hidden;
-//   overflow-y: auto;
-// }
-
-// /* Evita contenuti che escono dalla larghezza */
-// .container,
-// .section,
-// main,
-// footer {
-//   max-width: 100vw;
-//   overflow-x: hidden;
-// }
 
 #site-logo {
   max-width: 100%;
