aggiunti tutti gli enti sul sito

--- a/_sass/_schedule.scss
+++ b/_sass/_schedule.scss
@@ -167,9 +167,14 @@
 /* Speaker cards container */
 .speakers {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
-  padding-bottom: 0.8rem;  /* ENOUGH to push la linea sotto */
+  margin-top: 0.8rem;
+  margin-bottom: 1rem;
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: 1fr; // Uno per riga su mobile
+  }
 }
 
 /* Singolo speaker card */
