aggiornamento data chiusura iscrizioni

--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,7 @@ $color-type2-light: {{ site.data.generic.color2-light }};
 
 $text-color:       #111;
 $background-color: #eee;
-$brand-color:      #2a7ae2;
+$brand-color:      #8741e8;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
