updated registration and form button

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,10 +1,12 @@
 {% if include.data.description %}
-    <h4>{{ include.data.description.title }}</h4>
-    {% for item in include.data.description.paragraphs %}
-      <p>
-          {% for subitem in item.paragraph %}
-            {{subitem.line}} <br/>
-          {% endfor %}
-      </p>
-     {% endfor %}
+<!-- <div class="section fade-in"> -->
+<h4>{{ include.data.description.title }}</h4>
+{% for item in include.data.description.paragraphs %}
+<p>
+  {% for subitem in item.paragraph %}
+  {{subitem.line}} <br />
+  {% endfor %}
+</p>
+{% endfor %}
 {% endif %}
+<!-- </div> -->
