--- a/css/main.scss
+++ b/css/main.scss
@@ -152,3 +152,31 @@ h4 {
   margin-top: 0rem;    // puoi anche usare 0.5rem
   // margin-bottom: 0.5rem;
 }
+
+.custom-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: $color-type1;
+  color: white !important;
+  padding: 1.5rem 2.5rem;
+  border-radius: 12px;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 1.6rem;
+  // text-transform: uppercase;
+  letter-spacing: 0.03em;
+  box-shadow: 0 4px 20px rgba(176, 133, 235, 0.4);
+  transition: all 0.3s ease;
+
+  i.material-icons {
+    font-size: 1.4rem;
+    color: white;
+  }
+
+  &:hover {
+    background-color: darken($color-type1, 10%);
+    box-shadow: 0 4px 14px rgba(176, 133, 235, 0.4);
+  }
+}
